parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    T_DOT
    T_LBRACKET
    T_NULL
    T_RBRACKET

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_elementos
Rule 2     lista_elementos -> elemento
Rule 3     lista_elementos -> lista_elementos elemento
Rule 4     elemento -> estrutura_main
Rule 5     elemento -> funcao
Rule 6     elemento -> comando
Rule 7     lista_comandos -> comando
Rule 8     lista_comandos -> lista_comandos comando
Rule 9     comando -> declaracao
Rule 10    comando -> atribuicao
Rule 11    comando -> comando_if
Rule 12    comando -> comando_while
Rule 13    comando -> comando_for
Rule 14    comando -> comando_switch
Rule 15    comando -> comando_cin
Rule 16    comando -> comando_cout
Rule 17    comando -> comando_chamar_funcao
Rule 18    comando -> comando_define
Rule 19    comando -> comando_include
Rule 20    comando -> comando_swap
Rule 21    comando -> comando_delay
Rule 22    comando -> comando_restart
Rule 23    comando -> comando_jump
Rule 24    comando -> comando_faterr
Rule 25    comando -> comando_break
Rule 26    tipo -> T_INT
Rule 27    tipo -> T_FLOAT
Rule 28    tipo -> T_CHAR
Rule 29    tipo -> T_VOID
Rule 30    veracidade -> T_TRUE
Rule 31    veracidade -> T_FALSE
Rule 32    caracteres -> T_NUM
Rule 33    caracteres -> T_LETRA
Rule 34    caracteres -> T_DATETIME
Rule 35    declaracao -> tipo T_LETRA T_SEMICOLON
Rule 36    declaracao -> tipo T_LETRA T_ATR expressao_saida T_SEMICOLON
Rule 37    atribuicao -> T_LETRA T_ATR termo_aritmetico T_SEMICOLON
Rule 38    atribuicao -> T_LETRA T_ATR op_aritmetica T_SEMICOLON
Rule 39    aritmetico -> T_PLUS
Rule 40    aritmetico -> T_MINUS
Rule 41    aritmetico -> T_MUL
Rule 42    aritmetico -> T_DIV
Rule 43    aritmetico -> T_MOD
Rule 44    aritmetico -> T_EXP
Rule 45    termo_aritmetico -> caracteres
Rule 46    termo_aritmetico -> chamar_funcao
Rule 47    op_aritmetica -> termo_aritmetico aritmetico termo_aritmetico
Rule 48    op_aritmetica -> op_aritmetica aritmetico termo_aritmetico
Rule 49    retorno -> caracteres
Rule 50    retorno -> veracidade
Rule 51    retorno_opt -> T_RETURN retorno T_SEMICOLON
Rule 52    retorno_opt -> T_RETURN retorno
Rule 53    retorno_opt -> empty
Rule 54    estrutura_main -> T_MAIN T_LBRACE lista_comandos retorno_opt T_RBRACE
Rule 55    parametro -> tipo T_LETRA
Rule 56    lista_parametros -> parametro
Rule 57    lista_parametros -> lista_parametros T_COMMA parametro
Rule 58    lista_parametros_opt -> lista_parametros
Rule 59    lista_parametros_opt -> empty
Rule 60    funcao -> tipo T_LETRA T_LPAREN lista_parametros_opt T_RPAREN T_LBRACE lista_comandos retorno_opt T_RBRACE
Rule 61    lista_argumentos -> caracteres
Rule 62    lista_argumentos -> veracidade
Rule 63    lista_argumentos -> lista_argumentos T_COMMA caracteres
Rule 64    lista_argumentos -> lista_argumentos T_COMMA veracidade
Rule 65    lista_argumentos_opt -> lista_argumentos
Rule 66    lista_argumentos_opt -> empty
Rule 67    chamar_funcao -> T_LETRA T_LPAREN lista_argumentos_opt T_RPAREN
Rule 68    comando_chamar_funcao -> chamar_funcao T_SEMICOLON
Rule 69    relacional -> T_EQ
Rule 70    relacional -> T_NEQ
Rule 71    relacional -> T_GEQ
Rule 72    relacional -> T_LEQ
Rule 73    relacional -> T_GT
Rule 74    relacional -> T_LT
Rule 75    termo_relacional -> caracteres
Rule 76    termo_relacional -> veracidade
Rule 77    op_relacional -> termo_relacional relacional termo_relacional
Rule 78    op_relacional -> op_relacional relacional termo_relacional
Rule 79    logico -> T_AND
Rule 80    logico -> T_OR
Rule 81    condicao -> op_relacional
Rule 82    condicao -> T_NOT condicao
Rule 83    condicao -> op_relacional logico condicao
Rule 84    condicao -> T_LPAREN condicao T_RPAREN
Rule 85    comando_if -> T_IF T_LPAREN condicao T_RPAREN T_LBRACE lista_comandos T_RBRACE
Rule 86    comando_if -> T_IF T_LPAREN condicao T_RPAREN T_LBRACE lista_comandos T_RBRACE T_ELSE T_LBRACE lista_comandos T_RBRACE
Rule 87    comando_while -> T_WHILE T_LPAREN condicao T_RPAREN T_LBRACE lista_comandos T_RBRACE
Rule 88    comando_while -> T_FOREVER T_LBRACE lista_comandos T_RBRACE
Rule 89    atribuicao_for -> T_LETRA T_ATR termo_aritmetico
Rule 90    atribuicao_for -> T_LETRA T_ATR op_aritmetica
Rule 91    comando_for -> T_FOR T_LPAREN atribuicao_for T_SEMICOLON condicao T_SEMICOLON op_aritmetica T_RPAREN T_LBRACE lista_comandos T_RBRACE
Rule 92    comando_for -> T_FOR T_LPAREN atribuicao_for T_SEMICOLON condicao T_SEMICOLON termo_aritmetico T_RPAREN T_LBRACE lista_comandos T_RBRACE
Rule 93    caso -> T_CASE caracteres T_COLON lista_comandos T_BREAK T_SEMICOLON
Rule 94    caso -> T_CASE caracteres T_COLON lista_comandos T_BREAK
Rule 95    lista_casos -> caso
Rule 96    lista_casos -> lista_casos caso
Rule 97    comando_switch -> T_SWITCH T_LPAREN T_LETRA T_RPAREN T_LBRACE lista_casos T_RBRACE
Rule 98    comando_cin -> T_CIN T_LETRA T_SEMICOLON
Rule 99    comando_cin -> T_CIN T_LPAREN T_LETRA T_RPAREN T_SEMICOLON
Rule 100   expressao_saida -> termo_aritmetico
Rule 101   expressao_saida -> op_aritmetica
Rule 102   expressao_saida -> veracidade
Rule 103   comando_cout -> T_COUT expressao_saida T_SEMICOLON
Rule 104   comando_cout -> T_COUT T_LPAREN expressao_saida T_RPAREN T_SEMICOLON
Rule 105   comando_define -> T_DEFINE T_LETRA caracteres
Rule 106   comando_define -> T_DEFINE T_LETRA caracteres T_SEMICOLON
Rule 107   comando_include -> T_INCLUDE caracteres
Rule 108   comando_include -> T_INCLUDE caracteres T_SEMICOLON
Rule 109   comando_swap -> T_LETRA T_SWAP T_LETRA T_SEMICOLON
Rule 110   comando_swap -> T_LETRA T_SWAP T_LETRA
Rule 111   comando_delay -> T_DELAY T_LPAREN T_NUM T_RPAREN T_SEMICOLON
Rule 112   comando_delay -> T_DELAY T_LPAREN T_NUM T_RPAREN
Rule 113   comando_restart -> T_RESTART T_SEMICOLON
Rule 114   comando_restart -> T_RESTART
Rule 115   comando_jump -> T_GOTO T_NUM T_SEMICOLON
Rule 116   comando_jump -> T_GOTO T_NUM
Rule 117   comando_faterr -> T_FATERR T_SEMICOLON
Rule 118   comando_faterr -> T_FATERR
Rule 119   comando_break -> T_BREAK T_SEMICOLON
Rule 120   comando_break -> T_BREAK
Rule 121   empty -> <empty>

Terminals, with rules where they appear

T_AND                : 79
T_ATR                : 36 37 38 89 90
T_BREAK              : 93 94 119 120
T_CASE               : 93 94
T_CHAR               : 28
T_CIN                : 98 99
T_COLON              : 93 94
T_COMMA              : 57 63 64
T_COUT               : 103 104
T_DATETIME           : 34
T_DEFINE             : 105 106
T_DELAY              : 111 112
T_DIV                : 42
T_DOT                : 
T_ELSE               : 86
T_EQ                 : 69
T_EXP                : 44
T_FALSE              : 31
T_FATERR             : 117 118
T_FLOAT              : 27
T_FOR                : 91 92
T_FOREVER            : 88
T_GEQ                : 71
T_GOTO               : 115 116
T_GT                 : 73
T_IF                 : 85 86
T_INCLUDE            : 107 108
T_INT                : 26
T_LBRACE             : 54 60 85 86 86 87 88 91 92 97
T_LBRACKET           : 
T_LEQ                : 72
T_LETRA              : 33 35 36 37 38 55 60 67 89 90 97 98 99 105 106 109 109 110 110
T_LPAREN             : 60 67 84 85 86 87 91 92 97 99 104 111 112
T_LT                 : 74
T_MAIN               : 54
T_MINUS              : 40
T_MOD                : 43
T_MUL                : 41
T_NEQ                : 70
T_NOT                : 82
T_NULL               : 
T_NUM                : 32 111 112 115 116
T_OR                 : 80
T_PLUS               : 39
T_RBRACE             : 54 60 85 86 86 87 88 91 92 97
T_RBRACKET           : 
T_RESTART            : 113 114
T_RETURN             : 51 52
T_RPAREN             : 60 67 84 85 86 87 91 92 97 99 104 111 112
T_SEMICOLON          : 35 36 37 38 51 68 91 91 92 92 93 98 99 103 104 106 108 109 111 113 115 117 119
T_SWAP               : 109 110
T_SWITCH             : 97
T_TRUE               : 30
T_VOID               : 29
T_WHILE              : 87
error                : 

Nonterminals, with rules where they appear

aritmetico           : 47 48
atribuicao           : 10
atribuicao_for       : 91 92
caracteres           : 45 49 61 63 75 93 94 105 106 107 108
caso                 : 95 96
chamar_funcao        : 46 68
comando              : 6 7 8
comando_break        : 25
comando_chamar_funcao : 17
comando_cin          : 15
comando_cout         : 16
comando_define       : 18
comando_delay        : 21
comando_faterr       : 24
comando_for          : 13
comando_if           : 11
comando_include      : 19
comando_jump         : 23
comando_restart      : 22
comando_swap         : 20
comando_switch       : 14
comando_while        : 12
condicao             : 82 83 84 85 86 87 91 92
declaracao           : 9
elemento             : 2 3
empty                : 53 59 66
estrutura_main       : 4
expressao_saida      : 36 103 104
funcao               : 5
lista_argumentos     : 63 64 65
lista_argumentos_opt : 67
lista_casos          : 96 97
lista_comandos       : 8 54 60 85 86 86 87 88 91 92 93 94
lista_elementos      : 1 3
lista_parametros     : 57 58
lista_parametros_opt : 60
logico               : 83
op_aritmetica        : 38 48 90 91 101
op_relacional        : 78 81 83
parametro            : 56 57
programa             : 0
relacional           : 77 78
retorno              : 51 52
retorno_opt          : 54 60
termo_aritmetico     : 37 47 47 48 89 92 100
termo_relacional     : 77 77 78
tipo                 : 35 36 55 60
veracidade           : 50 62 64 76 102

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_elementos
    (2) lista_elementos -> . elemento
    (3) lista_elementos -> . lista_elementos elemento
    (4) elemento -> . estrutura_main
    (5) elemento -> . funcao
    (6) elemento -> . comando
    (54) estrutura_main -> . T_MAIN T_LBRACE lista_comandos retorno_opt T_RBRACE
    (60) funcao -> . tipo T_LETRA T_LPAREN lista_parametros_opt T_RPAREN T_LBRACE lista_comandos retorno_opt T_RBRACE
    (9) comando -> . declaracao
    (10) comando -> . atribuicao
    (11) comando -> . comando_if
    (12) comando -> . comando_while
    (13) comando -> . comando_for
    (14) comando -> . comando_switch
    (15) comando -> . comando_cin
    (16) comando -> . comando_cout
    (17) comando -> . comando_chamar_funcao
    (18) comando -> . comando_define
    (19) comando -> . comando_include
    (20) comando -> . comando_swap
    (21) comando -> . comando_delay
    (22) comando -> . comando_restart
    (23) comando -> . comando_jump
    (24) comando -> . comando_faterr
    (25) comando -> . comando_break
    (26) tipo -> . T_INT
    (27) tipo -> . T_FLOAT
    (28) tipo -> . T_CHAR
    (29) tipo -> . T_VOID
    (35) declaracao -> . tipo T_LETRA T_SEMICOLON
    (36) declaracao -> . tipo T_LETRA T_ATR expressao_saida T_SEMICOLON
    (37) atribuicao -> . T_LETRA T_ATR termo_aritmetico T_SEMICOLON
    (38) atribuicao -> . T_LETRA T_ATR op_aritmetica T_SEMICOLON
    (85) comando_if -> . T_IF T_LPAREN condicao T_RPAREN T_LBRACE lista_comandos T_RBRACE
    (86) comando_if -> . T_IF T_LPAREN condicao T_RPAREN T_LBRACE lista_comandos T_RBRACE T_ELSE T_LBRACE lista_comandos T_RBRACE
    (87) comando_while -> . T_WHILE T_LPAREN condicao T_RPAREN T_LBRACE lista_comandos T_RBRACE
    (88) comando_while -> . T_FOREVER T_LBRACE lista_comandos T_RBRACE
    (91) comando_for -> . T_FOR T_LPAREN atribuicao_for T_SEMICOLON condicao T_SEMICOLON op_aritmetica T_RPAREN T_LBRACE lista_comandos T_RBRACE
    (92) comando_for -> . T_FOR T_LPAREN atribuicao_for T_SEMICOLON condicao T_SEMICOLON termo_aritmetico T_RPAREN T_LBRACE lista_comandos T_RBRACE
    (97) comando_switch -> . T_SWITCH T_LPAREN T_LETRA T_RPAREN T_LBRACE lista_casos T_RBRACE
    (98) comando_cin -> . T_CIN T_LETRA T_SEMICOLON
    (99) comando_cin -> . T_CIN T_LPAREN T_LETRA T_RPAREN T_SEMICOLON
    (103) comando_cout -> . T_COUT expressao_saida T_SEMICOLON
    (104) comando_cout -> . T_COUT T_LPAREN expressao_saida T_RPAREN T_SEMICOLON
    (68) comando_chamar_funcao -> . chamar_funcao T_SEMICOLON
    (105) comando_define -> . T_DEFINE T_LETRA caracteres
    (106) comando_define -> . T_DEFINE T_LETRA caracteres T_SEMICOLON
    (107) comando_include -> . T_INCLUDE caracteres
    (108) comando_include -> . T_INCLUDE caracteres T_SEMICOLON
    (109) comando_swap -> . T_LETRA T_SWAP T_LETRA T_SEMICOLON
    (110) comando_swap -> . T_LETRA T_SWAP T_LETRA
    (111) comando_delay -> . T_DELAY T_LPAREN T_NUM T_RPAREN T_SEMICOLON
    (112) comando_delay -> . T_DELAY T_LPAREN T_NUM T_RPAREN
    (113) comando_restart -> . T_RESTART T_SEMICOLON
    (114) comando_restart -> . T_RESTART
    (115) comando_jump -> . T_GOTO T_NUM T_SEMICOLON
    (116) comando_jump -> . T_GOTO T_NUM
    (117) comando_faterr -> . T_FATERR T_SEMICOLON
    (118) comando_faterr -> . T_FATERR
    (119) comando_break -> . T_BREAK T_SEMICOLON
    (120) comando_break -> . T_BREAK
    (67) chamar_funcao -> . T_LETRA T_LPAREN lista_argumentos_opt T_RPAREN

    T_MAIN          shift and go to state 7
    T_INT           shift and go to state 27
    T_FLOAT         shift and go to state 28
    T_CHAR          shift and go to state 29
    T_VOID          shift and go to state 30
    T_LETRA         shift and go to state 9
    T_IF            shift and go to state 31
    T_WHILE         shift and go to state 32
    T_FOREVER       shift and go to state 33
    T_FOR           shift and go to state 34
    T_SWITCH        shift and go to state 35
    T_CIN           shift and go to state 36
    T_COUT          shift and go to state 37
    T_DEFINE        shift and go to state 39
    T_INCLUDE       shift and go to state 40
    T_DELAY         shift and go to state 41
    T_RESTART       shift and go to state 42
    T_GOTO          shift and go to state 43
    T_FATERR        shift and go to state 44
    T_BREAK         shift and go to state 45

    programa                       shift and go to state 1
    lista_elementos                shift and go to state 2
    elemento                       shift and go to state 3
    estrutura_main                 shift and go to state 4
    funcao                         shift and go to state 5
    comando                        shift and go to state 6
    tipo                           shift and go to state 8
    declaracao                     shift and go to state 10
    atribuicao                     shift and go to state 11
    comando_if                     shift and go to state 12
    comando_while                  shift and go to state 13
    comando_for                    shift and go to state 14
    comando_switch                 shift and go to state 15
    comando_cin                    shift and go to state 16
    comando_cout                   shift and go to state 17
    comando_chamar_funcao          shift and go to state 18
    comando_define                 shift and go to state 19
    comando_include                shift and go to state 20
    comando_swap                   shift and go to state 21
    comando_delay                  shift and go to state 22
    comando_restart                shift and go to state 23
    comando_jump                   shift and go to state 24
    comando_faterr                 shift and go to state 25
    comando_break                  shift and go to state 26
    chamar_funcao                  shift and go to state 38

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_elementos .
    (3) lista_elementos -> lista_elementos . elemento
    (4) elemento -> . estrutura_main
    (5) elemento -> . funcao
    (6) elemento -> . comando
    (54) estrutura_main -> . T_MAIN T_LBRACE lista_comandos retorno_opt T_RBRACE
    (60) funcao -> . tipo T_LETRA T_LPAREN lista_parametros_opt T_RPAREN T_LBRACE lista_comandos retorno_opt T_RBRACE
    (9) comando -> . declaracao
    (10) comando -> . atribuicao
    (11) comando -> . comando_if
    (12) comando -> . comando_while
    (13) comando -> . comando_for
    (14) comando -> . comando_switch
    (15) comando -> . comando_cin
    (16) comando -> . comando_cout
    (17) comando -> . comando_chamar_funcao
    (18) comando -> . comando_define
    (19) comando -> . comando_include
    (20) comando -> . comando_swap
    (21) comando -> . comando_delay
    (22) comando -> . comando_restart
    (23) comando -> . comando_jump
    (24) comando -> . comando_faterr
    (25) comando -> . comando_break
    (26) tipo -> . T_INT
    (27) tipo -> . T_FLOAT
    (28) tipo -> . T_CHAR
    (29) tipo -> . T_VOID
    (35) declaracao -> . tipo T_LETRA T_SEMICOLON
    (36) declaracao -> . tipo T_LETRA T_ATR expressao_saida T_SEMICOLON
    (37) atribuicao -> . T_LETRA T_ATR termo_aritmetico T_SEMICOLON
    (38) atribuicao -> . T_LETRA T_ATR op_aritmetica T_SEMICOLON
    (85) comando_if -> . T_IF T_LPAREN condicao T_RPAREN T_LBRACE lista_comandos T_RBRACE
    (86) comando_if -> . T_IF T_LPAREN condicao T_RPAREN T_LBRACE lista_comandos T_RBRACE T_ELSE T_LBRACE lista_comandos T_RBRACE
    (87) comando_while -> . T_WHILE T_LPAREN condicao T_RPAREN T_LBRACE lista_comandos T_RBRACE
    (88) comando_while -> . T_FOREVER T_LBRACE lista_comandos T_RBRACE
    (91) comando_for -> . T_FOR T_LPAREN atribuicao_for T_SEMICOLON condicao T_SEMICOLON op_aritmetica T_RPAREN T_LBRACE lista_comandos T_RBRACE
    (92) comando_for -> . T_FOR T_LPAREN atribuicao_for T_SEMICOLON condicao T_SEMICOLON termo_aritmetico T_RPAREN T_LBRACE lista_comandos T_RBRACE
    (97) comando_switch -> . T_SWITCH T_LPAREN T_LETRA T_RPAREN T_LBRACE lista_casos T_RBRACE
    (98) comando_cin -> . T_CIN T_LETRA T_SEMICOLON
    (99) comando_cin -> . T_CIN T_LPAREN T_LETRA T_RPAREN T_SEMICOLON
    (103) comando_cout -> . T_COUT expressao_saida T_SEMICOLON
    (104) comando_cout -> . T_COUT T_LPAREN expressao_saida T_RPAREN T_SEMICOLON
    (68) comando_chamar_funcao -> . chamar_funcao T_SEMICOLON
    (105) comando_define -> . T_DEFINE T_LETRA caracteres
    (106) comando_define -> . T_DEFINE T_LETRA caracteres T_SEMICOLON
    (107) comando_include -> . T_INCLUDE caracteres
    (108) comando_include -> . T_INCLUDE caracteres T_SEMICOLON
    (109) comando_swap -> . T_LETRA T_SWAP T_LETRA T_SEMICOLON
    (110) comando_swap -> . T_LETRA T_SWAP T_LETRA
    (111) comando_delay -> . T_DELAY T_LPAREN T_NUM T_RPAREN T_SEMICOLON
    (112) comando_delay -> . T_DELAY T_LPAREN T_NUM T_RPAREN
    (113) comando_restart -> . T_RESTART T_SEMICOLON
    (114) comando_restart -> . T_RESTART
    (115) comando_jump -> . T_GOTO T_NUM T_SEMICOLON
    (116) comando_jump -> . T_GOTO T_NUM
    (117) comando_faterr -> . T_FATERR T_SEMICOLON
    (118) comando_faterr -> . T_FATERR
    (119) comando_break -> . T_BREAK T_SEMICOLON
    (120) comando_break -> . T_BREAK
    (67) chamar_funcao -> . T_LETRA T_LPAREN lista_argumentos_opt T_RPAREN

    $end            reduce using rule 1 (programa -> lista_elementos .)
    T_MAIN          shift and go to state 7
    T_INT           shift and go to state 27
    T_FLOAT         shift and go to state 28
    T_CHAR          shift and go to state 29
    T_VOID          shift and go to state 30
    T_LETRA         shift and go to state 9
    T_IF            shift and go to state 31
    T_WHILE         shift and go to state 32
    T_FOREVER       shift and go to state 33
    T_FOR           shift and go to state 34
    T_SWITCH        shift and go to state 35
    T_CIN           shift and go to state 36
    T_COUT          shift and go to state 37
    T_DEFINE        shift and go to state 39
    T_INCLUDE       shift and go to state 40
    T_DELAY         shift and go to state 41
    T_RESTART       shift and go to state 42
    T_GOTO          shift and go to state 43
    T_FATERR        shift and go to state 44
    T_BREAK         shift and go to state 45

    elemento                       shift and go to state 46
    estrutura_main                 shift and go to state 4
    funcao                         shift and go to state 5
    comando                        shift and go to state 6
    tipo                           shift and go to state 8
    declaracao                     shift and go to state 10
    atribuicao                     shift and go to state 11
    comando_if                     shift and go to state 12
    comando_while                  shift and go to state 13
    comando_for                    shift and go to state 14
    comando_switch                 shift and go to state 15
    comando_cin                    shift and go to state 16
    comando_cout                   shift and go to state 17
    comando_chamar_funcao          shift and go to state 18
    comando_define                 shift and go to state 19
    comando_include                shift and go to state 20
    comando_swap                   shift and go to state 21
    comando_delay                  shift and go to state 22
    comando_restart                shift and go to state 23
    comando_jump                   shift and go to state 24
    comando_faterr                 shift and go to state 25
    comando_break                  shift and go to state 26
    chamar_funcao                  shift and go to state 38

state 3

    (2) lista_elementos -> elemento .

    T_MAIN          reduce using rule 2 (lista_elementos -> elemento .)
    T_INT           reduce using rule 2 (lista_elementos -> elemento .)
    T_FLOAT         reduce using rule 2 (lista_elementos -> elemento .)
    T_CHAR          reduce using rule 2 (lista_elementos -> elemento .)
    T_VOID          reduce using rule 2 (lista_elementos -> elemento .)
    T_LETRA         reduce using rule 2 (lista_elementos -> elemento .)
    T_IF            reduce using rule 2 (lista_elementos -> elemento .)
    T_WHILE         reduce using rule 2 (lista_elementos -> elemento .)
    T_FOREVER       reduce using rule 2 (lista_elementos -> elemento .)
    T_FOR           reduce using rule 2 (lista_elementos -> elemento .)
    T_SWITCH        reduce using rule 2 (lista_elementos -> elemento .)
    T_CIN           reduce using rule 2 (lista_elementos -> elemento .)
    T_COUT          reduce using rule 2 (lista_elementos -> elemento .)
    T_DEFINE        reduce using rule 2 (lista_elementos -> elemento .)
    T_INCLUDE       reduce using rule 2 (lista_elementos -> elemento .)
    T_DELAY         reduce using rule 2 (lista_elementos -> elemento .)
    T_RESTART       reduce using rule 2 (lista_elementos -> elemento .)
    T_GOTO          reduce using rule 2 (lista_elementos -> elemento .)
    T_FATERR        reduce using rule 2 (lista_elementos -> elemento .)
    T_BREAK         reduce using rule 2 (lista_elementos -> elemento .)
    $end            reduce using rule 2 (lista_elementos -> elemento .)


state 4

    (4) elemento -> estrutura_main .

    T_MAIN          reduce using rule 4 (elemento -> estrutura_main .)
    T_INT           reduce using rule 4 (elemento -> estrutura_main .)
    T_FLOAT         reduce using rule 4 (elemento -> estrutura_main .)
    T_CHAR          reduce using rule 4 (elemento -> estrutura_main .)
    T_VOID          reduce using rule 4 (elemento -> estrutura_main .)
    T_LETRA         reduce using rule 4 (elemento -> estrutura_main .)
    T_IF            reduce using rule 4 (elemento -> estrutura_main .)
    T_WHILE         reduce using rule 4 (elemento -> estrutura_main .)
    T_FOREVER       reduce using rule 4 (elemento -> estrutura_main .)
    T_FOR           reduce using rule 4 (elemento -> estrutura_main .)
    T_SWITCH        reduce using rule 4 (elemento -> estrutura_main .)
    T_CIN           reduce using rule 4 (elemento -> estrutura_main .)
    T_COUT          reduce using rule 4 (elemento -> estrutura_main .)
    T_DEFINE        reduce using rule 4 (elemento -> estrutura_main .)
    T_INCLUDE       reduce using rule 4 (elemento -> estrutura_main .)
    T_DELAY         reduce using rule 4 (elemento -> estrutura_main .)
    T_RESTART       reduce using rule 4 (elemento -> estrutura_main .)
    T_GOTO          reduce using rule 4 (elemento -> estrutura_main .)
    T_FATERR        reduce using rule 4 (elemento -> estrutura_main .)
    T_BREAK         reduce using rule 4 (elemento -> estrutura_main .)
    $end            reduce using rule 4 (elemento -> estrutura_main .)


state 5

    (5) elemento -> funcao .

    T_MAIN          reduce using rule 5 (elemento -> funcao .)
    T_INT           reduce using rule 5 (elemento -> funcao .)
    T_FLOAT         reduce using rule 5 (elemento -> funcao .)
    T_CHAR          reduce using rule 5 (elemento -> funcao .)
    T_VOID          reduce using rule 5 (elemento -> funcao .)
    T_LETRA         reduce using rule 5 (elemento -> funcao .)
    T_IF            reduce using rule 5 (elemento -> funcao .)
    T_WHILE         reduce using rule 5 (elemento -> funcao .)
    T_FOREVER       reduce using rule 5 (elemento -> funcao .)
    T_FOR           reduce using rule 5 (elemento -> funcao .)
    T_SWITCH        reduce using rule 5 (elemento -> funcao .)
    T_CIN           reduce using rule 5 (elemento -> funcao .)
    T_COUT          reduce using rule 5 (elemento -> funcao .)
    T_DEFINE        reduce using rule 5 (elemento -> funcao .)
    T_INCLUDE       reduce using rule 5 (elemento -> funcao .)
    T_DELAY         reduce using rule 5 (elemento -> funcao .)
    T_RESTART       reduce using rule 5 (elemento -> funcao .)
    T_GOTO          reduce using rule 5 (elemento -> funcao .)
    T_FATERR        reduce using rule 5 (elemento -> funcao .)
    T_BREAK         reduce using rule 5 (elemento -> funcao .)
    $end            reduce using rule 5 (elemento -> funcao .)


state 6

    (6) elemento -> comando .

    T_MAIN          reduce using rule 6 (elemento -> comando .)
    T_INT           reduce using rule 6 (elemento -> comando .)
    T_FLOAT         reduce using rule 6 (elemento -> comando .)
    T_CHAR          reduce using rule 6 (elemento -> comando .)
    T_VOID          reduce using rule 6 (elemento -> comando .)
    T_LETRA         reduce using rule 6 (elemento -> comando .)
    T_IF            reduce using rule 6 (elemento -> comando .)
    T_WHILE         reduce using rule 6 (elemento -> comando .)
    T_FOREVER       reduce using rule 6 (elemento -> comando .)
    T_FOR           reduce using rule 6 (elemento -> comando .)
    T_SWITCH        reduce using rule 6 (elemento -> comando .)
    T_CIN           reduce using rule 6 (elemento -> comando .)
    T_COUT          reduce using rule 6 (elemento -> comando .)
    T_DEFINE        reduce using rule 6 (elemento -> comando .)
    T_INCLUDE       reduce using rule 6 (elemento -> comando .)
    T_DELAY         reduce using rule 6 (elemento -> comando .)
    T_RESTART       reduce using rule 6 (elemento -> comando .)
    T_GOTO          reduce using rule 6 (elemento -> comando .)
    T_FATERR        reduce using rule 6 (elemento -> comando .)
    T_BREAK         reduce using rule 6 (elemento -> comando .)
    $end            reduce using rule 6 (elemento -> comando .)


state 7

    (54) estrutura_main -> T_MAIN . T_LBRACE lista_comandos retorno_opt T_RBRACE

    T_LBRACE        shift and go to state 47


state 8

    (60) funcao -> tipo . T_LETRA T_LPAREN lista_parametros_opt T_RPAREN T_LBRACE lista_comandos retorno_opt T_RBRACE
    (35) declaracao -> tipo . T_LETRA T_SEMICOLON
    (36) declaracao -> tipo . T_LETRA T_ATR expressao_saida T_SEMICOLON

    T_LETRA         shift and go to state 48


state 9

    (37) atribuicao -> T_LETRA . T_ATR termo_aritmetico T_SEMICOLON
    (38) atribuicao -> T_LETRA . T_ATR op_aritmetica T_SEMICOLON
    (109) comando_swap -> T_LETRA . T_SWAP T_LETRA T_SEMICOLON
    (110) comando_swap -> T_LETRA . T_SWAP T_LETRA
    (67) chamar_funcao -> T_LETRA . T_LPAREN lista_argumentos_opt T_RPAREN

    T_ATR           shift and go to state 49
    T_SWAP          shift and go to state 50
    T_LPAREN        shift and go to state 51


state 10

    (9) comando -> declaracao .

    T_MAIN          reduce using rule 9 (comando -> declaracao .)
    T_INT           reduce using rule 9 (comando -> declaracao .)
    T_FLOAT         reduce using rule 9 (comando -> declaracao .)
    T_CHAR          reduce using rule 9 (comando -> declaracao .)
    T_VOID          reduce using rule 9 (comando -> declaracao .)
    T_LETRA         reduce using rule 9 (comando -> declaracao .)
    T_IF            reduce using rule 9 (comando -> declaracao .)
    T_WHILE         reduce using rule 9 (comando -> declaracao .)
    T_FOREVER       reduce using rule 9 (comando -> declaracao .)
    T_FOR           reduce using rule 9 (comando -> declaracao .)
    T_SWITCH        reduce using rule 9 (comando -> declaracao .)
    T_CIN           reduce using rule 9 (comando -> declaracao .)
    T_COUT          reduce using rule 9 (comando -> declaracao .)
    T_DEFINE        reduce using rule 9 (comando -> declaracao .)
    T_INCLUDE       reduce using rule 9 (comando -> declaracao .)
    T_DELAY         reduce using rule 9 (comando -> declaracao .)
    T_RESTART       reduce using rule 9 (comando -> declaracao .)
    T_GOTO          reduce using rule 9 (comando -> declaracao .)
    T_FATERR        reduce using rule 9 (comando -> declaracao .)
    T_BREAK         reduce using rule 9 (comando -> declaracao .)
    $end            reduce using rule 9 (comando -> declaracao .)
    T_RETURN        reduce using rule 9 (comando -> declaracao .)
    T_RBRACE        reduce using rule 9 (comando -> declaracao .)


state 11

    (10) comando -> atribuicao .

    T_MAIN          reduce using rule 10 (comando -> atribuicao .)
    T_INT           reduce using rule 10 (comando -> atribuicao .)
    T_FLOAT         reduce using rule 10 (comando -> atribuicao .)
    T_CHAR          reduce using rule 10 (comando -> atribuicao .)
    T_VOID          reduce using rule 10 (comando -> atribuicao .)
    T_LETRA         reduce using rule 10 (comando -> atribuicao .)
    T_IF            reduce using rule 10 (comando -> atribuicao .)
    T_WHILE         reduce using rule 10 (comando -> atribuicao .)
    T_FOREVER       reduce using rule 10 (comando -> atribuicao .)
    T_FOR           reduce using rule 10 (comando -> atribuicao .)
    T_SWITCH        reduce using rule 10 (comando -> atribuicao .)
    T_CIN           reduce using rule 10 (comando -> atribuicao .)
    T_COUT          reduce using rule 10 (comando -> atribuicao .)
    T_DEFINE        reduce using rule 10 (comando -> atribuicao .)
    T_INCLUDE       reduce using rule 10 (comando -> atribuicao .)
    T_DELAY         reduce using rule 10 (comando -> atribuicao .)
    T_RESTART       reduce using rule 10 (comando -> atribuicao .)
    T_GOTO          reduce using rule 10 (comando -> atribuicao .)
    T_FATERR        reduce using rule 10 (comando -> atribuicao .)
    T_BREAK         reduce using rule 10 (comando -> atribuicao .)
    $end            reduce using rule 10 (comando -> atribuicao .)
    T_RETURN        reduce using rule 10 (comando -> atribuicao .)
    T_RBRACE        reduce using rule 10 (comando -> atribuicao .)


state 12

    (11) comando -> comando_if .

    T_MAIN          reduce using rule 11 (comando -> comando_if .)
    T_INT           reduce using rule 11 (comando -> comando_if .)
    T_FLOAT         reduce using rule 11 (comando -> comando_if .)
    T_CHAR          reduce using rule 11 (comando -> comando_if .)
    T_VOID          reduce using rule 11 (comando -> comando_if .)
    T_LETRA         reduce using rule 11 (comando -> comando_if .)
